--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                   </div>
               </div>
                 <div class="col-sm-3 text-center">
-                    <div class="c100 p50">
-                        <span class="percent">50%</span>
+                    <div class="c100 p55">
+                        <span class="percent">55%</span>
                         <span class="comp">PHP</span>
                         <div class="slice">
                             <div class="bar"></div>
@@ -169,8 +169,8 @@
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <div class="c100 p50">
-                        <span class="percent">50%</span>
+                    <div class="c100 p60">
+                        <span class="percent">60%</span>
                         <span class="comp">Symfony 2</span>
                         <div class="slice">
                             <div class="bar"></div>
@@ -182,6 +182,18 @@
                     <div class="c100 p60">
                         <span class="percent">60%</span>
                         <span class="comp">my SQL</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-comp">
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p20">
+                        <span class="percent">20%</span>
+                        <span class="comp">Elasticsearch</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -208,7 +220,7 @@
                 <div class="col-sm-3 text-center">
                     <div class="c100 p40">
                         <span class="percent">40%</span>
-                        <span class="comp">Apache 2</span>
+                        <span class="comp">Docker</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -234,18 +246,6 @@
                             <div class="fill"></div>
                         </div>
                     </div>
-                </div>
-                <div class="row row-comp">
-                  <div class="col-sm-3 text-center">
-                      <div class="c100 p40">
-                          <span class="percent">40%</span>
-                          <span class="comp">Docker</span>
-                          <div class="slice">
-                              <div class="bar"></div>
-                              <div class="fill"></div>
-                          </div>
-                      </div>
-                  </div>
                 </div>
             </div>
             <div class="row row-comp-title row-comp">
@@ -290,11 +290,34 @@
 
             <div class="row white-job">
                 <div class="col-sm-12">
-                        <h3 class="text-center">A Life Worldwide</h3>
-                        <h4 class="text-center">Développeur / 2016 (2 mois) - stage</h4>
-                        <p>
-                            Améliorations des sites <a target="_blank" href="https://www.alw-shop.fr/" class="underline-a">A Life Wordlwide</a> et <a target="_blank" href="https://ma-boutique-club.com/" class="underline-a">Ma boutique club</a>
-                        </p>
+                    <h3 class="text-center">Netvigie</h3>
+                    <h4 class="text-center">Développeur / Octobre 2017 à aujourd'hui - stage</h4>
+                    <p>
+                        Développement sur le projet Seenaptic utilisant Symfony 3
+                        <br> - Développement front et back end
+                        <br> - Création d'une extension Chrome
+                    </p>
+                    <div class="row">
+                        <span class="label">Symfony 3</span>
+                        <span class="label">PHP</span>
+                        <span class="label">HTML</span>
+                        <span class="label">CSS</span>
+                        <span class="label">JavaScript</span>
+                        <span class="label">jQuery</span>
+                        <span class="label">Git</span>
+                        <span class="label">Npm</span>
+                        <span class="label">Elasticsearch</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row white-job">
+                <div class="col-sm-12">
+                    <h3 class="text-center">A Life Worldwide</h3>
+                    <h4 class="text-center">Développeur / 2017 (2 mois) - stage</h4>
+                    <p>
+                        Améliorations des sites <a target="_blank" href="https://www.alw-shop.fr/" class="underline-a">A Life Wordlwide</a> et <a target="_blank" href="https://ma-boutique-club.com/" class="underline-a">Ma boutique club</a>
+                    </p>
                     <div class="row">
                         <span class="label">Wordpress</span>
                         <span class="label">HTML</span>
@@ -308,11 +331,11 @@
 
             <div class="row white-job">
                 <div class="col-sm-12">
-                        <h3 class="text-center">Trans-Ghestem</h3>
-                        <h4 class="text-center">Développeur / 2016 (2 mois) - stage</h4>
-                        <p>
-                            Création du site de l'entreprise <a target="_blank" href="http://www.ghestem.fr" class="underline-a">Trans-Ghestem</a>
-                        </p>
+                    <h3 class="text-center">Trans-Ghestem</h3>
+                    <h4 class="text-center">Développeur / 2016 (2 mois) - stage</h4>
+                    <p>
+                        Création du site de l'entreprise <a target="_blank" href="http://www.ghestem.fr" class="underline-a">Trans-Ghestem</a>
+                    </p>
                     <div class="row">
                         <span class="label">Wordpress</span>
                         <span class="label">HTML</span>
@@ -326,14 +349,14 @@
 
             <div class="row white-job">
                 <div class="col-sm-12">
-                        <h3 class="text-center">Décathlon Services</h3>
-                        <h4 class="text-center">Développeur / 2015 (2 mois) - stage</h4>
-                        <p>
-                            Mise en place de l'intégration continue pour les projets Trocathlon et un site de location de matériel
-                            <br> - Création des tests Behat
-                            <br> - Création des jobs sur Jenkins
-                            <br> - Refactoring à l'aide de l'outil SonarQube
-                        </p>
+                    <h3 class="text-center">Décathlon Services</h3>
+                    <h4 class="text-center">Développeur / 2015 (2 mois) - stage</h4>
+                    <p>
+                        Mise en place de l'intégration continue pour les projets Trocathlon et un site de location de matériel
+                        <br> - Création des tests Behat
+                        <br> - Création des jobs sur Jenkins
+                        <br> - Refactoring à l'aide de l'outil SonarQube
+                    </p>
                     <div class="row">
                         <span class="label">Symfony 2</span>
                         <span class="label">My SQL</span>
@@ -367,6 +390,12 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 text-center">
+                    <h3>Bachelor chef de projet digital</h3>
+                    <h4>3ème année</h4>
+                    <h4>EFFICOM Lille</h4>
+                    <h4>2017 > aujourd'hui</h4>
+                </div>
+                <div class="col-sm-3 text-center">
                     <h3>BTS WEB et DIGITAL</h3>
                     <h4>2ème année</h4>
                     <h4>EFFICOM Lille</h4>
@@ -384,12 +413,6 @@
                     <h4>1ère année</h4>
                     <h4>Lycée Baggio Lille</h4>
                     <h4>2013 > 2014</h4>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <h3>Bac Pro ELEEC</h3>
-                    <h4>Lycée les Hauts de Flandre Seclin</h4>
-                    <h4>2011 > 2013</h4>
-                    <h4>Obtenu</h4>
                 </div>
             </div>
         </div>
