--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                         <span class="name">Vincent Delevoye</span>
                         <hr class="star-light">
                         <span class="skills">Développeur Web</span></br>
-                        <span class="skills">22 ans</span></br>
+                        <span class="skills">28 ans</span></br>
                         <span class="skills">Permis B</span></br>
                         <span class="skills">Tel: +33 6 60 21 14 23</span></br>
-                        <span class="skills">Mail: vincentdelevoye@gmail.com</span>
+                        <span class="skills">Mail: <a href="mailto:vincentdelevoye@gmail.com">vincentdelevoye@gmail.com</a></span>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <div class="col-sm-3 text-center">
                     <div class="c100 p75">
                         <span class="percent">75%</span>
-                        <span class="comp">HTML5</span>
+                        <span class="comp">HTML</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -119,17 +119,7 @@
                 <div class="col-sm-3 text-center">
                     <div class="c100 p75">
                         <span class="percent">75%</span>
-                        <span class="comp">CSS3</span>
-                        <div class="slice">
-                            <div class="bar"></div>
-                            <div class="fill"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <div class="c100 p80">
-                        <span class="percent">80%</span>
-                        <span class="comp">SASS</span>
+                        <span class="comp">CSS</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -146,21 +136,31 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p50">
+                        <span class="percent">50%</span>
+                        <span class="comp">jQuery</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row row-comp">
-              <div class="col-sm-3 text-center">
-                  <div class="c100 p50">
-                      <span class="percent">50%</span>
-                      <span class="comp">jQuery</span>
-                      <div class="slice">
-                          <div class="bar"></div>
-                          <div class="fill"></div>
-                      </div>
-                  </div>
-              </div>
                 <div class="col-sm-3 text-center">
-                    <div class="c100 p55">
-                        <span class="percent">55%</span>
+                    <div class="c100 p40">
+                        <span class="percent">40%</span>
+                        <span class="comp">VueJS</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p70">
+                        <span class="percent">70%</span>
                         <span class="comp">PHP</span>
                         <div class="slice">
                             <div class="bar"></div>
@@ -171,7 +171,29 @@
                 <div class="col-sm-3 text-center">
                     <div class="c100 p60">
                         <span class="percent">60%</span>
-                        <span class="comp">Symfony 3</span>
+                        <span class="comp">Symfony</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p55">
+                        <span class="percent">55%</span>
+                        <span class="comp">Api Platform</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-comp">
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p85">
+                        <span class="percent">85%</span>
+                        <span class="comp">Prestashop</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -181,15 +203,13 @@
                 <div class="col-sm-3 text-center">
                     <div class="c100 p60">
                         <span class="percent">60%</span>
-                        <span class="comp">my SQL</span>
+                        <span class="comp">MySql</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row row-comp">
                 <div class="col-sm-3 text-center">
                     <div class="c100 p20">
                         <span class="percent">20%</span>
@@ -208,8 +228,8 @@
             </div>
             <div class="row row-comp">
                 <div class="col-sm-3 text-center">
-                    <div class="c100 p40">
-                        <span class="percent">40%</span>
+                    <div class="c100 p45">
+                        <span class="percent">45%</span>
                         <span class="comp">Linux</span>
                         <div class="slice">
                             <div class="bar"></div>
@@ -218,8 +238,8 @@
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <div class="c100 p40">
-                        <span class="percent">40%</span>
+                    <div class="c100 p50">
+                        <span class="percent">50%</span>
                         <span class="comp">Docker</span>
                         <div class="slice">
                             <div class="bar"></div>
@@ -228,8 +248,8 @@
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <div class="c100 p40">
-                        <span class="percent">40%</span>
+                    <div class="c100 p35">
+                        <span class="percent">35%</span>
                         <span class="comp">Jenkins</span>
                         <div class="slice">
                             <div class="bar"></div>
@@ -241,6 +261,28 @@
                     <div class="c100 p40">
                         <span class="percent">40%</span>
                         <span class="comp">Sonar</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-comp">
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p50">
+                        <span class="percent">50%</span>
+                        <span class="comp">CI / CD</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 text-center">
+                    <div class="c100 p35">
+                        <span class="percent">35%</span>
+                        <span class="comp">GCloud</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -265,9 +307,19 @@
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
+                    <div class="c100 p70">
+                        <span class="percent">70%</span>
+                        <span class="comp">Méthode</span><span class="retour-ligne-comp">Agile</span>
+                        <div class="slice">
+                            <div class="bar"></div>
+                            <div class="fill"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
-                        <span class="comp">Intégration</span><span class="retour-ligne-comp">continue</span>
+                        <span class="comp">Git</span>
                         <div class="slice">
                             <div class="bar"></div>
                             <div class="fill"></div>
@@ -290,23 +342,60 @@
 
             <div class="row white-job">
                 <div class="col-sm-12">
+                    <h3 class="text-center">World Sellers</h3>
+                    <h4 class="text-center">Octobre 2018 à Septembre 2024 - Alternance / CDI</h4>
+                    <p>
+                        Développement Prestashop
+                        <br> - Création de module
+                        <br> - Modification de thème / thème de mail
+                    </p>
+                    <p>
+                        Développement d'application sous VueJS et Api Platform (Symfony). Mise en place pour cette application d'une CI/CD, création des Dockerfile, création de la pipeline Bitbucket et configuration GCloud 
+                    </p>
+                    <div class="row">
+                        <div class="col-md-12 labels">
+                            <span class="label">HTML</span>
+                            <span class="label">CSS</span>
+                            <span class="label">MySql</span>
+                            <span class="label">PHP 8</span>
+                            <span class="label">Symfony 6</span>
+                            <span class="label">Api Platform</span>
+                            <span class="label">JavaScript</span>
+                            <span class="label">jQuery</span>
+                            <span class="label">VueJS</span>
+                            <span class="label">Git</span>
+                            <span class="label">Pipeline Bitbucket</span>
+                            <span class="label">GCloud</span>
+                            <span class="label">Docker</span>
+                            <span class="label">CI / CD</span>
+                            <span class="label">Prestashop</span>
+                            <span class="label">Méthode agile</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row white-job">
+                <div class="col-sm-12">
                     <h3 class="text-center">Netvigie</h3>
-                    <h4 class="text-center">Développeur / Octobre 2017 à aujourd'hui - stage</h4>
+                    <h4 class="text-center">Développeur / Octobre 2017 à Août 2018 - stage</h4>
                     <p>
                         Développement sur le projet Seenaptic utilisant Symfony 3
                         <br> - Développement front et back end
                         <br> - Création d'une extension Chrome
                     </p>
                     <div class="row">
-                        <span class="label">Symfony 3</span>
-                        <span class="label">PHP</span>
-                        <span class="label">HTML</span>
-                        <span class="label">CSS</span>
-                        <span class="label">JavaScript</span>
-                        <span class="label">jQuery</span>
-                        <span class="label">Git</span>
-                        <span class="label">Npm</span>
-                        <span class="label">Elasticsearch</span>
+                        <div class="col-md-12 labels">
+                            <span class="label">Symfony 3</span>
+                            <span class="label">PHP</span>
+                            <span class="label">HTML</span>
+                            <span class="label">CSS</span>
+                            <span class="label">JavaScript</span>
+                            <span class="label">jQuery</span>
+                            <span class="label">Git</span>
+                            <span class="label">Npm</span>
+                            <span class="label">Elasticsearch</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -319,12 +408,14 @@
                         Améliorations des sites <a target="_blank" href="https://www.alw-shop.fr/" class="underline-a">A Life Wordlwide</a> et <a target="_blank" href="https://ma-boutique-club.com/" class="underline-a">Ma boutique club</a>
                     </p>
                     <div class="row">
-                        <span class="label">Wordpress</span>
-                        <span class="label">HTML</span>
-                        <span class="label">CSS</span>
-                        <span class="label">JavaScript</span>
-                        <span class="label">PHP</span>
-                        <span class="label">jQuery</span>
+                        <div class="col-md-12 labels">
+                            <span class="label">Wordpress</span>
+                            <span class="label">HTML</span>
+                            <span class="label">CSS</span>
+                            <span class="label">JavaScript</span>
+                            <span class="label">PHP</span>
+                            <span class="label">jQuery</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -337,12 +428,14 @@
                         Création du site de l'entreprise <a target="_blank" href="http://www.ghestem.fr" class="underline-a">Trans-Ghestem</a>
                     </p>
                     <div class="row">
-                        <span class="label">Wordpress</span>
-                        <span class="label">HTML</span>
-                        <span class="label">CSS</span>
-                        <span class="label">JavaScript</span>
-                        <span class="label">PHP</span>
-                        <span class="label">jQuery</span>
+                        <div class="col-md-12 labels">
+                            <span class="label">Wordpress</span>
+                            <span class="label">HTML</span>
+                            <span class="label">CSS</span>
+                            <span class="label">JavaScript</span>
+                            <span class="label">PHP</span>
+                            <span class="label">jQuery</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -358,11 +451,13 @@
                         <br> - Refactoring à l'aide de l'outil SonarQube
                     </p>
                     <div class="row">
-                        <span class="label">Symfony 2</span>
-                        <span class="label">My SQL</span>
-                        <span class="label">Git</span>
-                        <span class="label">Behat</span>
-                        <span class="label">Jenkins</span>
+                        <div class="col-md-12 labels">
+                            <span class="label">Symfony 2</span>
+                            <span class="label">My SQL</span>
+                            <span class="label">Git</span>
+                            <span class="label">Behat</span>
+                            <span class="label">Jenkins</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -390,10 +485,16 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 text-center">
+                    <h3>Mastère Expert en Ingénierie Informatique</h3>
+                    <h4>4 / 5ème année</h4>
+                    <h4>EFFICOM Lille</h4>
+                    <h4>2018 > 2020</h4>
+                </div>
+                <div class="col-sm-3 text-center">
                     <h3>Bachelor chef de projet digital</h3>
                     <h4>3ème année</h4>
                     <h4>EFFICOM Lille</h4>
-                    <h4>2017 > aujourd'hui</h4>
+                    <h4>2017 > 2018</h4>
                 </div>
                 <div class="col-sm-3 text-center">
                     <h3>BTS WEB et DIGITAL</h3>
@@ -407,12 +508,6 @@
                     <h4>1ère et 2ème année</h4>
                     <h4>Supinfo Lille</h4>
                     <h4>2014 > 2016</h4>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <h3>BTS CRSA</h3>
-                    <h4>1ère année</h4>
-                    <h4>Lycée Baggio Lille</h4>
-                    <h4>2013 > 2014</h4>
                 </div>
             </div>
         </div>
