--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <h3>Développement Web et base de données</h3>
                 </div>
             </div>
-            <div class="row row-comp">
-                <div class="col-sm-3 text-center">
+            <div class="row-comp">
+                <div class="col-comp text-center">
                     <div class="c100 p75">
                         <span class="percent">75%</span>
                         <span class="comp">HTML</span>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p75">
                         <span class="percent">75%</span>
                         <span class="comp">CSS</span>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
                         <span class="comp">JavaScript</span>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
                         <span class="comp">jQuery</span>
@@ -147,8 +147,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-comp">
-                <div class="col-sm-3 text-center">
+            <div class="row-comp">
+                <div class="col-comp text-center">
                     <div class="c100 p40">
                         <span class="percent">40%</span>
                         <span class="comp">VueJS</span>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p70">
                         <span class="percent">70%</span>
                         <span class="comp">PHP</span>
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p60">
                         <span class="percent">60%</span>
                         <span class="comp">Symfony</span>
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p55">
                         <span class="percent">55%</span>
                         <span class="comp">Api Platform</span>
@@ -189,8 +189,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-comp">
-                <div class="col-sm-3 text-center">
+            <div class="row-comp">
+                <div class="col-comp text-center">
                     <div class="c100 p85">
                         <span class="percent">85%</span>
                         <span class="comp">Prestashop</span>
@@ -200,7 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p60">
                         <span class="percent">60%</span>
                         <span class="comp">MySql</span>
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p20">
                         <span class="percent">20%</span>
                         <span class="comp">Elasticsearch</span>
@@ -226,8 +226,8 @@
                     <h3>Administration de serveur</h3>
                 </div>
             </div>
-            <div class="row row-comp">
-                <div class="col-sm-3 text-center">
+            <div class="row-comp">
+                <div class="col-comp text-center">
                     <div class="c100 p45">
                         <span class="percent">45%</span>
                         <span class="comp">Linux</span>
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
                         <span class="comp">Docker</span>
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p35">
                         <span class="percent">35%</span>
                         <span class="comp">Jenkins</span>
@@ -257,7 +257,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p40">
                         <span class="percent">40%</span>
                         <span class="comp">Sonar</span>
@@ -268,8 +268,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-comp">
-                <div class="col-sm-3 text-center">
+            <div class="row-comp">
+                <div class="col-comp text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
                         <span class="comp">CI / CD</span>
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p35">
                         <span class="percent">35%</span>
                         <span class="comp">GCloud</span>
@@ -295,8 +295,8 @@
                     <h3>Autre</h3>
                 </div>
             </div>
-            <div class="row row-comp">
-                <div class="col-sm-3 text-center">
+            <div class="row-comp">
+                <div class="col-comp text-center">
                     <div class="c100 p30">
                         <span class="percent">30%</span>
                         <span class="comp">Photoshop</span>
@@ -306,7 +306,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p70">
                         <span class="percent">70%</span>
                         <span class="comp">Méthode</span><span class="retour-ligne-comp">Agile</span>
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-comp text-center">
                     <div class="c100 p50">
                         <span class="percent">50%</span>
                         <span class="comp">Git</span>
